--- a/ProjectoKalah_v2/testing.ipynb
+++ b/ProjectoKalah_v2/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,8 @@
     "    return score\n",
     "\n",
     "toe1 = JogadorAlfaBeta(\"chapiteau\",6,toes)\n",
-    "# toe2 = JogadorAlfaBeta(\"heehoo\",6,toes)"
+    "# toe2 = JogadorAlfaBeta(\"heehoo\",6,toes)\n",
+    "\n"
    ]
   },
   {
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,16 +133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'chapiteau'"
+       "'El Caos Inteligente 6'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,21 +192,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "({'chapiteau': 13, 'Pebbles': 12, 'Empate': 5},\n",
-       " {'chapiteau': 11, 'Pebbles': 18, 'Empate': 1},\n",
-       " {'chapiteau': 24, 'Pebbles': 30, 'Empate': 6},\n",
-       " {'chapiteau': 78, 'Pebbles': 96})"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb Cell 12\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m jogo\u001b[39m=\u001b[39mKalah(\u001b[39m10\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#n jogaNpares(jogo,300,el_caos,el_caos_int6)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# jogo.result()\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# _,_,res=joga11(jogo,toe1,pebs,True)\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m jogaNpares(jogo,\u001b[39m300\u001b[39;49m,toe1,pebs)\n",
+      "\u001b[1;32m/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m tabela\u001b[39m=\u001b[39m{}\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     _,_,vencedor\u001b[39m=\u001b[39mjoga11(jogo,jog1,jog2)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     tabelaPrim[vencedor]\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     _,_,vencedor\u001b[39m=\u001b[39mjoga11(jogo,jog2,jog1)\n",
+      "\u001b[1;32m/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb Cell 12\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m----------   LANCE:\u001b[39m\u001b[39m'\u001b[39m,lance)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     game\u001b[39m.\u001b[39mdisplay(estado)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m jogada \u001b[39m=\u001b[39m proxjog\u001b[39m.\u001b[39;49mfun(game, estado)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39mif\u001b[39;00m verbose:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mJOGADA=\u001b[39m\u001b[39m'\u001b[39m,jogada)\n",
+      "\u001b[1;32m/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, nome, depth,fun_eval):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnome \u001b[39m=\u001b[39m nome\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/mimi/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/testing.ipynb#X14sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfun \u001b[39m=\u001b[39m \u001b[39mlambda\u001b[39;00m game, state: alphabeta_cutoff_search_new(state,game,depth,eval_fn\u001b[39m=\u001b[39;49mfun_eval)\n",
+      "File \u001b[0;32m~/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/jogos.py:220\u001b[0m, in \u001b[0;36malphabeta_cutoff_search_new\u001b[0;34m(state, game, d, cutoff_test, eval_fn)\u001b[0m\n\u001b[1;32m    218\u001b[0m random\u001b[39m.\u001b[39mshuffle(movimentos)        \u001b[39m## para dar variabilidade aos jogos\u001b[39;00m\n\u001b[1;32m    219\u001b[0m \u001b[39mfor\u001b[39;00m a \u001b[39min\u001b[39;00m movimentos:              \u001b[39m##\u001b[39;00m\n\u001b[0;32m--> 220\u001b[0m     v \u001b[39m=\u001b[39m min_value(game\u001b[39m.\u001b[39;49mresult(state, a), best_score, beta, \u001b[39m1\u001b[39;49m)\n\u001b[1;32m    221\u001b[0m     \u001b[39mif\u001b[39;00m v \u001b[39m>\u001b[39m best_score:\n\u001b[1;32m    222\u001b[0m         best_score \u001b[39m=\u001b[39m v\n",
+      "File \u001b[0;32m~/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/jogos.py:201\u001b[0m, in \u001b[0;36malphabeta_cutoff_search_new.<locals>.min_value\u001b[0;34m(state, alpha, beta, depth)\u001b[0m\n\u001b[1;32m    199\u001b[0m movimentos \u001b[39m=\u001b[39m game\u001b[39m.\u001b[39mactions(state)  \u001b[39m## jb\u001b[39;00m\n\u001b[1;32m    200\u001b[0m \u001b[39mfor\u001b[39;00m a \u001b[39min\u001b[39;00m movimentos:              \u001b[39m##\u001b[39;00m\n\u001b[0;32m--> 201\u001b[0m     beta \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(v, max_value(game\u001b[39m.\u001b[39;49mresult(state, a),\n\u001b[1;32m    202\u001b[0m                          alpha, beta, depth \u001b[39m+\u001b[39;49m \u001b[39m1\u001b[39;49m))\n\u001b[1;32m    203\u001b[0m     \u001b[39mif\u001b[39;00m beta \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m alpha:\n\u001b[1;32m    204\u001b[0m         \u001b[39mreturn\u001b[39;00m beta\n",
+      "File \u001b[0;32m~/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/jogos.py:188\u001b[0m, in \u001b[0;36malphabeta_cutoff_search_new.<locals>.max_value\u001b[0;34m(state, alpha, beta, depth)\u001b[0m\n\u001b[1;32m    186\u001b[0m movimentos \u001b[39m=\u001b[39m game\u001b[39m.\u001b[39mactions(state)  \u001b[39m## jb\u001b[39;00m\n\u001b[1;32m    187\u001b[0m \u001b[39mfor\u001b[39;00m a \u001b[39min\u001b[39;00m movimentos:              \u001b[39m##\u001b[39;00m\n\u001b[0;32m--> 188\u001b[0m     alpha \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(v, min_value(game\u001b[39m.\u001b[39;49mresult(state, a),\n\u001b[1;32m    189\u001b[0m                          alpha, beta, depth \u001b[39m+\u001b[39;49m \u001b[39m1\u001b[39;49m))\n\u001b[1;32m    190\u001b[0m     \u001b[39mif\u001b[39;00m alpha \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m beta:\n\u001b[1;32m    191\u001b[0m         \u001b[39mreturn\u001b[39;00m alpha\n",
+      "File \u001b[0;32m~/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/jogos.py:201\u001b[0m, in \u001b[0;36malphabeta_cutoff_search_new.<locals>.min_value\u001b[0;34m(state, alpha, beta, depth)\u001b[0m\n\u001b[1;32m    199\u001b[0m movimentos \u001b[39m=\u001b[39m game\u001b[39m.\u001b[39mactions(state)  \u001b[39m## jb\u001b[39;00m\n\u001b[1;32m    200\u001b[0m \u001b[39mfor\u001b[39;00m a \u001b[39min\u001b[39;00m movimentos:              \u001b[39m##\u001b[39;00m\n\u001b[0;32m--> 201\u001b[0m     beta \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(v, max_value(game\u001b[39m.\u001b[39;49mresult(state, a),\n\u001b[1;32m    202\u001b[0m                          alpha, beta, depth \u001b[39m+\u001b[39;49m \u001b[39m1\u001b[39;49m))\n\u001b[1;32m    203\u001b[0m     \u001b[39mif\u001b[39;00m beta \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m alpha:\n\u001b[1;32m    204\u001b[0m         \u001b[39mreturn\u001b[39;00m beta\n",
+      "File \u001b[0;32m~/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/jogos.py:188\u001b[0m, in \u001b[0;36malphabeta_cutoff_search_new.<locals>.max_value\u001b[0;34m(state, alpha, beta, depth)\u001b[0m\n\u001b[1;32m    186\u001b[0m movimentos \u001b[39m=\u001b[39m game\u001b[39m.\u001b[39mactions(state)  \u001b[39m## jb\u001b[39;00m\n\u001b[1;32m    187\u001b[0m \u001b[39mfor\u001b[39;00m a \u001b[39min\u001b[39;00m movimentos:              \u001b[39m##\u001b[39;00m\n\u001b[0;32m--> 188\u001b[0m     alpha \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(v, min_value(game\u001b[39m.\u001b[39;49mresult(state, a),\n\u001b[1;32m    189\u001b[0m                          alpha, beta, depth \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m))\n\u001b[1;32m    190\u001b[0m     \u001b[39mif\u001b[39;00m alpha \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m beta:\n\u001b[1;32m    191\u001b[0m         \u001b[39mreturn\u001b[39;00m alpha\n",
+      "File \u001b[0;32m~/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/kalah.py:251\u001b[0m, in \u001b[0;36mKalah.result\u001b[0;34m(self, state, move)\u001b[0m\n\u001b[1;32m    248\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mresult\u001b[39m(\u001b[39mself\u001b[39m, state, move):\n\u001b[1;32m    249\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mExecute move from state, returning next state\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m--> 251\u001b[0m     \u001b[39mreturn\u001b[39;00m state\u001b[39m.\u001b[39;49mreal_move(move)\n",
+      "File \u001b[0;32m~/Desktop/school/A3S1/IntroAI/Projects/ProjectoKalah_v2/kalah.py:115\u001b[0m, in \u001b[0;36mKalahState.real_move\u001b[0;34m(self, move)\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mreal_move\u001b[39m(\u001b[39mself\u001b[39m,move):\n\u001b[1;32m    114\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Make a move or a non-stop list of moves. While the the seed ends in the player's counter, go on\"\"\"\u001b[39;00m\n\u001b[0;32m--> 115\u001b[0m     clone\u001b[39m=\u001b[39mcopy\u001b[39m.\u001b[39;49mdeepcopy(\u001b[39mself\u001b[39;49m)\n\u001b[1;32m    116\u001b[0m     clone\u001b[39m.\u001b[39mmake_move(move)\n\u001b[1;32m    117\u001b[0m     \u001b[39mreturn\u001b[39;00m clone\n",
+      "File \u001b[0;32m/usr/lib/python3.10/copy.py:172\u001b[0m, in \u001b[0;36mdeepcopy\u001b[0;34m(x, memo, _nil)\u001b[0m\n\u001b[1;32m    170\u001b[0m                 y \u001b[39m=\u001b[39m x\n\u001b[1;32m    171\u001b[0m             \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 172\u001b[0m                 y \u001b[39m=\u001b[39m _reconstruct(x, memo, \u001b[39m*\u001b[39;49mrv)\n\u001b[1;32m    174\u001b[0m \u001b[39m# If is its own copy, don't memoize.\u001b[39;00m\n\u001b[1;32m    175\u001b[0m \u001b[39mif\u001b[39;00m y \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m x:\n",
+      "File \u001b[0;32m/usr/lib/python3.10/copy.py:271\u001b[0m, in \u001b[0;36m_reconstruct\u001b[0;34m(x, memo, func, args, state, listiter, dictiter, deepcopy)\u001b[0m\n\u001b[1;32m    269\u001b[0m \u001b[39mif\u001b[39;00m state \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    270\u001b[0m     \u001b[39mif\u001b[39;00m deep:\n\u001b[0;32m--> 271\u001b[0m         state \u001b[39m=\u001b[39m deepcopy(state, memo)\n\u001b[1;32m    272\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(y, \u001b[39m'\u001b[39m\u001b[39m__setstate__\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m    273\u001b[0m         y\u001b[39m.\u001b[39m__setstate__(state)\n",
+      "File \u001b[0;32m/usr/lib/python3.10/copy.py:146\u001b[0m, in \u001b[0;36mdeepcopy\u001b[0;34m(x, memo, _nil)\u001b[0m\n\u001b[1;32m    144\u001b[0m copier \u001b[39m=\u001b[39m _deepcopy_dispatch\u001b[39m.\u001b[39mget(\u001b[39mcls\u001b[39m)\n\u001b[1;32m    145\u001b[0m \u001b[39mif\u001b[39;00m copier \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 146\u001b[0m     y \u001b[39m=\u001b[39m copier(x, memo)\n\u001b[1;32m    147\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    148\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39missubclass\u001b[39m(\u001b[39mcls\u001b[39m, \u001b[39mtype\u001b[39m):\n",
+      "File \u001b[0;32m/usr/lib/python3.10/copy.py:231\u001b[0m, in \u001b[0;36m_deepcopy_dict\u001b[0;34m(x, memo, deepcopy)\u001b[0m\n\u001b[1;32m    229\u001b[0m memo[\u001b[39mid\u001b[39m(x)] \u001b[39m=\u001b[39m y\n\u001b[1;32m    230\u001b[0m \u001b[39mfor\u001b[39;00m key, value \u001b[39min\u001b[39;00m x\u001b[39m.\u001b[39mitems():\n\u001b[0;32m--> 231\u001b[0m     y[deepcopy(key, memo)] \u001b[39m=\u001b[39m deepcopy(value, memo)\n\u001b[1;32m    232\u001b[0m \u001b[39mreturn\u001b[39;00m y\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -216,7 +229,7 @@
     "# jogo.result()\n",
     "\n",
     "# _,_,res=joga11(jogo,toe1,pebs,True)\n",
-    "jogaNpares(jogo,30,toe1,pebs)"
+    "jogaNpares(jogo,300,toe1,pebs)"
    ]
   }
  ],
