added GA thats testable in testing.ipynb

--- a/ProjectoKalah_v2/testing.ipynb
+++ b/ProjectoKalah_v2/testing.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from kalah import *\n",
     "# from pebblereaper import *\n",
     "from extrakalah import *\n",
-    "\n",
     "depth = 1\n",
-    "weights = [1,1,5,1]\n",
+    "weights = [1,1,1,1]\n",
     "h_list = [pit_total,side_total,chance_to_clear_right_most,congregate_seeds]\n",
     "\n",
     "\n",
@@ -43,14 +42,12 @@
     "        jogada = proxjog.fun(game, estado) # state produced\n",
     "        if verbose:\n",
     "            print('JOGADA=',jogada)\n",
-    "\n",
-    "        estado=game.result(estado,jogada)\n",
-    "        if verbose:\n",
     "            print(\"pit_total:\",pit_total(estado,proxjog))\n",
     "            print(\"side_total: \", side_total(estado,proxjog))\n",
     "            print(\"chance_to_clear_right_most:\",chance_to_clear_right_most(estado,proxjog))\n",
     "            print(\"congregate_seeds: \", congregate_seeds(estado,proxjog))\n",
     "            print(\"heuristic total:\",linearPond(estado,proxjog,weights,h_list,100))\n",
+    "        estado=game.result(estado,jogada)\n",
     "        lista_jogadas.append(jogada)\n",
     "        proxjog = jog2 if proxjog == jog1 else jog1\n",
     "        lance+=1\n",
@@ -62,7 +59,7 @@
     "        resultado = jog2.nome\n",
     "    else:\n",
     "        resultado='Empate'\n",
-    "    return ((jog1.nome,jog2.nome),lista_jogadas,resultado)"
+    "    return ((jog1.nome,jog2.nome),lista_jogadas,resultado)\n"
    ]
   },
   {
@@ -74,17 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def toes(state,player):\n",
     "    board = state.state\n",
     "    if state.is_game_over():\n",
-    "        result = state.result()\n",
-    "        if result == 0:\n",
-    "            result = 0\n",
-    "        return 100 if result == player else -100\n",
+    "        aux = state.result()\n",
+    "        return aux*100 if player == state.SOUTH else aux*-100 \n",
     "    \n",
     "    own_seeds = sum(board[:7]) if player == 0 else sum(board[7:14])\n",
     "    opponent_seeds = sum(board[7:14]) if player == 0 else sum(board[:7])\n",
@@ -105,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +152,7 @@
        "'El Caos Inteligente 6'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +186,16 @@
     "            tabelaScore[x]=scores['Vitoria']*tabela[x]+empates\n",
     "    return tabelaScore\n",
     "\n",
-    "def jogaNpares(jogo,n,jog1,jog2):\n",
+    "def getPoints(tabela, jogador):\n",
+    "    empates=tabela['Empate']\n",
+    "    total=0\n",
+    "    for x in tabela:\n",
+    "        total += scores['Vitoria']*tabela[x]+empates\n",
+    "    player_score = scores['Vitoria']*tabela[jogador]+empates\n",
+    "    return player_score/total\n",
+    "\n",
+    "#ret_jog_index == 0 or 1 ONLY\n",
+    "def jogaNpares(jogo,n,jog1,jog2,ret_jog_index):\n",
     "    tabelaPrim={jog1.nome:0, jog2.nome:0, 'Empate':0}\n",
     "    tabelaSeg={jog1.nome:0, jog2.nome:0, 'Empate':0}\n",
     "    tabela={}\n",
@@ -202,12 +206,21 @@
     "        tabelaSeg[vencedor]+=1\n",
     "    for x in tabelaPrim:\n",
     "        tabela[x]=tabelaPrim[x]+tabelaSeg[x]\n",
-    "    return tabelaPrim,tabelaSeg,tabela,traduzPontos(tabela)"
+    "    ret_jog = jog1.nome if ret_jog_index == 0 else jog2.nome\n",
+    "    return getPoints(tabela,ret_jog)\n",
+    "    # return tabelaPrim,tabelaSeg,tabela,traduzPontos(tabela)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SUPER IMPORTANT: if you want to see the full table using jogaNpares rather than the numerical win rate for GA, comment/uncomment the last two lines above"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -219,202 +232,310 @@
       "     _  _  _  _  _  _\n",
       "     1  2  3  4  5  6\n",
       "-------------------------\n",
-      "|  | 4| 4| 4| 3| 4| 4|  |\n",
-      "| 2|-----------------| 0|\n",
-      "|  | 3| 4| 4| 4| 4| 4|  | <--\n",
+      "|  | 4| 4| 4| 4| 4| 3|  |\n",
+      "| 0|-----------------| 0|\n",
+      "|  | 5| 3| 5| 4| 4| 4|  | <--\n",
       "-------------------------\n",
       "     6  5  4  3  2  1\n",
       "\n",
       "JOGADA= 0\n",
-      "pit_total: 2\n",
-      "side_total:  0\n",
+      "pit_total: 0\n",
+      "side_total:  -2\n",
       "chance_to_clear_right_most: 0\n",
-      "congregate_seeds:  4\n",
-      "heuristic total: 6\n",
+      "congregate_seeds:  3.2\n",
+      "heuristic total: 1.2000000000000002\n",
       "----------   LANCE: 1\n",
       "----------------------\n",
       "     _  _  _  _  _  _\n",
       "     1  2  3  4  5  6\n",
       "-------------------------\n",
-      "|  | 4| 4| 4| 3| 4| 4|  | <--\n",
-      "| 2|-----------------| 0|\n",
-      "|  | 0| 5| 5| 5| 4| 4|  |\n",
+      "|  | 4| 4| 4| 4| 4| 3|  | <--\n",
+      "| 0|-----------------| 0|\n",
+      "|  | 0| 4| 6| 5| 5| 5|  |\n",
       "-------------------------\n",
       "     6  5  4  3  2  1\n",
       "\n",
       "JOGADA= 7\n",
-      "pit_total: 2\n",
-      "side_total:  0\n",
+      "pit_total: 0\n",
+      "side_total:  -2\n",
       "chance_to_clear_right_most: 0\n",
-      "congregate_seeds:  4.0\n",
-      "heuristic total: 6.0\n",
+      "congregate_seeds:  3.2\n",
+      "heuristic total: 1.2000000000000002\n",
       "----------   LANCE: 2\n",
       "----------------------\n",
       "     _  _  _  _  _  _\n",
       "     1  2  3  4  5  6\n",
       "-------------------------\n",
-      "|  | 4| 5| 5| 4| 5| 0|  |\n",
-      "| 2|-----------------| 0|\n",
-      "|  | 0| 5| 5| 5| 4| 4|  | <--\n",
+      "|  | 4| 4| 5| 5| 5| 0|  |\n",
+      "| 0|-----------------| 0|\n",
+      "|  | 0| 4| 6| 5| 5| 5|  | <--\n",
       "-------------------------\n",
       "     6  5  4  3  2  1\n",
       "\n",
       "JOGADA= 1\n",
-      "pit_total: 1\n",
-      "side_total:  1\n",
+      "pit_total: 0\n",
+      "side_total:  -2\n",
       "chance_to_clear_right_most: 0\n",
       "congregate_seeds:  4.0\n",
-      "heuristic total: 6.0\n",
+      "heuristic total: 2.0\n",
       "----------   LANCE: 3\n",
       "----------------------\n",
       "     _  _  _  _  _  _\n",
       "     1  2  3  4  5  6\n",
       "-------------------------\n",
-      "|  | 4| 5| 5| 4| 5| 0|  | <-- (Pass)\n",
-      "| 2|-----------------| 1|\n",
-      "|  | 0| 0| 6| 6| 5| 5|  |\n",
+      "|  | 4| 4| 5| 5| 5| 0|  | <--\n",
+      "| 0|-----------------| 0|\n",
+      "|  | 0| 0| 7| 6| 6| 6|  |\n",
       "-------------------------\n",
       "     6  5  4  3  2  1\n",
       "\n",
-      "JOGADA= -1\n",
-      "pit_total: 1\n",
-      "side_total:  1\n",
+      "JOGADA= 8\n",
+      "pit_total: 0\n",
+      "side_total:  -2\n",
       "chance_to_clear_right_most: 0\n",
       "congregate_seeds:  4.0\n",
-      "heuristic total: 6.0\n",
+      "heuristic total: 2.0\n",
       "----------   LANCE: 4\n",
       "----------------------\n",
       "     _  _  _  _  _  _\n",
       "     1  2  3  4  5  6\n",
       "-------------------------\n",
-      "|  | 4| 5| 5| 4| 5| 0|  |\n",
-      "| 2|-----------------| 1|\n",
-      "|  | 0| 0| 6| 6| 5| 5|  | <--\n",
+      "|  | 5| 5| 6| 6| 0| 0|  |\n",
+      "| 1|-----------------| 0|\n",
+      "|  | 0| 0| 7| 6| 6| 6|  | <-- (Pass)\n",
       "-------------------------\n",
       "     6  5  4  3  2  1\n",
       "\n",
-      "JOGADA= 2\n",
-      "pit_total: 0\n",
-      "side_total:  6\n",
+      "JOGADA= -1\n",
+      "pit_total: 1\n",
+      "side_total:  -3\n",
       "chance_to_clear_right_most: 0\n",
-      "congregate_seeds:  4.800000000000001\n",
-      "heuristic total: 10.8\n",
+      "congregate_seeds:  3.5999999999999996\n",
+      "heuristic total: 1.5999999999999996\n",
       "----------   LANCE: 5\n",
       "----------------------\n",
       "     _  _  _  _  _  _\n",
       "     1  2  3  4  5  6\n",
       "-------------------------\n",
-      "|  | 4| 5| 5| 4| 6| 1|  | <--\n",
-      "| 2|-----------------| 2|\n",
-      "|  | 0| 0| 0| 7| 6| 6|  |\n",
+      "|  | 5| 5| 6| 6| 0| 0|  | <--\n",
+      "| 1|-----------------| 0|\n",
+      "|  | 0| 0| 7| 6| 6| 6|  |\n",
       "-------------------------\n",
       "     6  5  4  3  2  1\n",
       "\n",
-      "JOGADA= 7\n",
-      "pit_total: 0\n",
-      "side_total:  6\n",
+      "JOGADA= 9\n",
+      "pit_total: 1\n",
+      "side_total:  -3\n",
       "chance_to_clear_right_most: 0\n",
-      "congregate_seeds:  5.6000000000000005\n",
-      "heuristic total: 11.600000000000001\n",
+      "congregate_seeds:  3.5999999999999996\n",
+      "heuristic total: 1.5999999999999996\n",
       "----------   LANCE: 6\n",
       "----------------------\n",
       "     _  _  _  _  _  _\n",
       "     1  2  3  4  5  6\n",
       "-------------------------\n",
-      "|  | 4| 5| 5| 4| 7| 0|  |\n",
-      "| 2|-----------------| 2|\n",
-      "|  | 0| 0| 0| 7| 6| 6|  | <--\n",
+      "|  | 6| 6| 7| 0| 0| 0|  |\n",
+      "| 2|-----------------| 0|\n",
+      "|  | 1| 1| 7| 6| 6| 6|  | <--\n",
       "-------------------------\n",
       "     6  5  4  3  2  1\n",
       "\n",
-      "JOGADA= 3\n",
-      "pit_total: -1\n",
-      "side_total:  15\n",
+      "JOGADA= 0\n",
+      "pit_total: 2\n",
+      "side_total:  -8\n",
       "chance_to_clear_right_most: 0\n",
-      "congregate_seeds:  6.4\n",
-      "heuristic total: 20.4\n",
+      "congregate_seeds:  2.8000000000000003\n",
+      "heuristic total: -3.1999999999999997\n",
       "----------   LANCE: 7\n",
       "----------------------\n",
       "     _  _  _  _  _  _\n",
       "     1  2  3  4  5  6\n",
       "-------------------------\n",
-      "|  | 4| 5| 6| 5| 8| 1|  | <--\n",
-      "| 2|-----------------| 3|\n",
-      "|  | 0| 0| 0| 0| 7| 7|  |\n",
+      "|  | 6| 6| 7| 0| 0| 0|  | <--\n",
+      "| 2|-----------------| 0|\n",
+      "|  | 0| 2| 7| 6| 6| 6|  |\n",
       "-------------------------\n",
       "     6  5  4  3  2  1\n",
       "\n",
-      "JOGADA= 7\n",
-      "pit_total: -1\n",
-      "side_total:  15\n",
+      "JOGADA= 11\n",
+      "pit_total: 2\n",
+      "side_total:  -8\n",
       "chance_to_clear_right_most: 0\n",
-      "congregate_seeds:  7.2\n",
-      "heuristic total: 21.2\n",
+      "congregate_seeds:  2.8000000000000003\n",
+      "heuristic total: -3.1999999999999997\n",
       "----------   LANCE: 8\n",
       "----------------------\n",
       "     _  _  _  _  _  _\n",
       "     1  2  3  4  5  6\n",
       "-------------------------\n",
-      "|  | 4| 5| 6| 5| 9| 0|  |\n",
-      "| 2|-----------------| 3|\n",
-      "|  | 0| 0| 0| 0| 7| 7|  | <--\n",
+      "|  | 7| 0| 7| 0| 0| 0|  |\n",
+      "| 3|-----------------| 0|\n",
+      "|  | 1| 3| 8| 7| 6| 6|  | <--\n",
       "-------------------------\n",
       "     6  5  4  3  2  1\n",
       "\n",
-      "JOGADA= 4\n",
-      "pit_total: -2\n",
-      "side_total:  26\n",
+      "JOGADA= 0\n",
+      "pit_total: 3\n",
+      "side_total:  -17\n",
       "chance_to_clear_right_most: 0\n",
-      "congregate_seeds:  8.0\n",
-      "heuristic total: 32.0\n",
+      "congregate_seeds:  2.8000000000000003\n",
+      "heuristic total: -11.2\n",
       "----------   LANCE: 9\n",
       "----------------------\n",
       "     _  _  _  _  _  _\n",
       "     1  2  3  4  5  6\n",
       "-------------------------\n",
-      "|  | 4| 6| 7| 6|10| 1|  | <--\n",
-      "| 2|-----------------| 4|\n",
-      "|  | 0| 0| 0| 0| 0| 8|  |\n",
+      "|  | 7| 0| 7| 0| 0| 0|  | <--\n",
+      "| 3|-----------------| 0|\n",
+      "|  | 0| 4| 8| 7| 6| 6|  |\n",
       "-------------------------\n",
       "     6  5  4  3  2  1\n",
       "\n",
-      "JOGADA= 7\n",
-      "pit_total: -2\n",
-      "side_total:  26\n",
+      "JOGADA= 10\n",
+      "pit_total: 3\n",
+      "side_total:  -17\n",
       "chance_to_clear_right_most: 0\n",
-      "congregate_seeds:  8.8\n",
-      "heuristic total: 32.8\n",
+      "congregate_seeds:  2.8000000000000003\n",
+      "heuristic total: -11.2\n",
       "----------   LANCE: 10\n",
       "----------------------\n",
       "     _  _  _  _  _  _\n",
       "     1  2  3  4  5  6\n",
       "-------------------------\n",
-      "|  | 4| 6| 7| 6|11| 0|  |\n",
-      "| 2|-----------------| 4|\n",
-      "|  | 0| 0| 0| 0| 0| 8|  | <--\n",
+      "|  | 8| 1| 0| 0| 0| 0|  |\n",
+      "| 4|-----------------| 0|\n",
+      "|  | 1| 5| 9| 8| 6| 6|  | <--\n",
       "-------------------------\n",
       "     6  5  4  3  2  1\n",
       "\n",
-      "JOGADA= 5\n",
-      "pit_total: 26\n",
-      "side_total:  0\n",
+      "JOGADA= 0\n",
+      "pit_total: 4\n",
+      "side_total:  -26\n",
+      "chance_to_clear_right_most: 0\n",
+      "congregate_seeds:  0.2\n",
+      "heuristic total: -21.8\n",
+      "----------   LANCE: 11\n",
+      "----------------------\n",
+      "     _  _  _  _  _  _\n",
+      "     1  2  3  4  5  6\n",
+      "-------------------------\n",
+      "|  | 8| 1| 0| 0| 0| 0|  | <--\n",
+      "| 4|-----------------| 0|\n",
+      "|  | 0| 6| 9| 8| 6| 6|  |\n",
+      "-------------------------\n",
+      "     6  5  4  3  2  1\n",
+      "\n",
+      "JOGADA= 12\n",
+      "pit_total: 4\n",
+      "side_total:  -26\n",
+      "chance_to_clear_right_most: 0\n",
+      "congregate_seeds:  0.2\n",
+      "heuristic total: -21.8\n",
+      "----------   LANCE: 12\n",
+      "----------------------\n",
+      "     _  _  _  _  _  _\n",
+      "     1  2  3  4  5  6\n",
+      "-------------------------\n",
+      "|  | 0| 1| 0| 0| 0| 0|  |\n",
+      "|13|-----------------| 0|\n",
+      "|  | 1| 7|10| 9| 7| 0|  | <--\n",
+      "-------------------------\n",
+      "     6  5  4  3  2  1\n",
+      "\n",
+      "JOGADA= 0\n",
+      "pit_total: 13\n",
+      "side_total:  -33\n",
       "chance_to_clear_right_most: 1\n",
-      "congregate_seeds:  0\n",
-      "heuristic total: 100\n",
-      "Pebbles\n"
+      "congregate_seeds:  0.2\n",
+      "heuristic total: -18.8\n",
+      "----------   LANCE: 13\n",
+      "----------------------\n",
+      "     _  _  _  _  _  _\n",
+      "     1  2  3  4  5  6\n",
+      "-------------------------\n",
+      "|  | 0| 1| 0| 0| 0| 0|  | <--\n",
+      "|13|-----------------| 0|\n",
+      "|  | 0| 8|10| 9| 7| 0|  |\n",
+      "-------------------------\n",
+      "     6  5  4  3  2  1\n",
+      "\n",
+      "JOGADA= 11\n",
+      "pit_total: 13\n",
+      "side_total:  -33\n",
+      "chance_to_clear_right_most: 1\n",
+      "congregate_seeds:  0.2\n",
+      "heuristic total: -18.8\n"
      ]
     }
    ],
    "source": [
     "# jogaNpares()\n",
     "\n",
-    "jogo=Kalah(10)\n",
+    "jogo=Kalah(0)\n",
     "#n jogaNpares(jogo,300,el_caos,el_caos_int6)\n",
     "# jogo.result()\n",
     "\n",
     "_,_,res=joga11(jogo,toe1,pebs,True)\n",
-    "print(res)\n",
-    "# jogaNpares(jogo,300,toe1,pebs)"
+    "# jogaNpares(jogo,30,toe1,pebs,1)\n",
+    "# print(res)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SearchPlus Genetic Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.11, 0.28, 0.26, 0.35], [0.01, 0.57, 0.23, 0.19], [0.07, 0.42, 0.09, 0.42], [0.28, 0.17, 0.5, 0.05], [0.07, 0.35, 0.05, 0.53], [0.16, 0.08, 0.48, 0.28], [0.19, 0.45, 0.1, 0.26], [0.22, 0.04, 0.55, 0.19]]\n",
+      "[0.0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1, 0.11, 0.12, 0.13, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.2, 0.21, 0.22, 0.23, 0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.3, 0.31, 0.32, 0.33, 0.34, 0.35, 0.36, 0.37, 0.38, 0.39, 0.4, 0.41, 0.42, 0.43, 0.44, 0.45, 0.46, 0.47, 0.48, 0.49, 0.5, 0.51, 0.52, 0.53, 0.54, 0.55, 0.56, 0.57, 0.58, 0.59, 0.6, 0.61, 0.62, 0.63, 0.64, 0.65, 0.66, 0.67, 0.68, 0.69, 0.7, 0.71, 0.72, 0.73, 0.74, 0.75, 0.76, 0.77, 0.78, 0.79, 0.8, 0.81, 0.82, 0.83, 0.84, 0.85, 0.86, 0.87, 0.88, 0.89, 0.9, 0.91, 0.92, 0.93, 0.94, 0.95, 0.96, 0.97, 0.98, 0.99]\n",
+      "([0.22, 0.04, 0.55, 0.19], 0.9166666666666666)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from searchPlus import genetic_algorithm_custom\n",
+    "import random\n",
+    "\n",
+    "# for steps in 0.01, use 2. \n",
+    "PRECISION = 2\n",
+    "\n",
+    "# generates n weights that adds up to 1, precision see above\n",
+    "# e.g. [0.7, 0.12, 0.12, 0.06]\n",
+    "def generate_population(n,precision):\n",
+    "    total = pow(10,precision)\n",
+    "    dividers = sorted(random.sample(range(1, total), n - 1))\n",
+    "    return [(a - b)/total for a, b in zip(dividers + [total], [0] + dividers)]\n",
+    "\n",
+    "# generates a pool of potential changes from 0-1\n",
+    "# a list that goes [0.0, 0.01 ... 1] essentially. based on precision\n",
+    "def generate_pool(precision):\n",
+    "    return [round(x*pow(10,-precision),precision) for x in range(pow(10,precision))]\n",
+    "    \n",
+    "# generates 8 \"gene\" as an initial population\n",
+    "pop = [generate_population(4,PRECISION) for _ in range(8)]\n",
+    "pop_pool = generate_pool(PRECISION)\n",
+    "print(pop)\n",
+    "print(pop_pool)\n",
+    "\n",
+    "# the fitness function evaluates how well a gene does. in this case we insert the weights\n",
+    "# into a player into npare games, which i've changed it to return the win percentage\n",
+    "pebs_generator = lambda name,w:JogadorLinearPond(name,depth,w,h_list,100)\n",
+    "fitness= lambda name, w:jogaNpares(jogo,30,toe1,pebs_generator(name,w),1)\n",
+    "\n",
+    "#call the genetic algorithm\n",
+    "best_fit_weights = genetic_algorithm_custom(pop,fitness,pop_pool,None,10)\n",
+    "\n",
+    "print(best_fit_weights)"
    ]
   }
  ],
