Initial AV4 files

--- a/ProjectoKalah_v2/testing.ipynb
+++ b/ProjectoKalah_v2/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "# from pebblereaper import *\n",
     "from extrakalah import *\n",
     "depth = 6\n",
-    "weights = [0.51, 0.01, 0.34, 0.1]\n",
+    "weights = 0.4792989892387631, 0.011830037271317503, 0.3932184795149378, 0.11565249397498173 #[0.51, 0.01, 0.34, 0.1]\n",
     "h_list = [pit_total,side_total,chance_to_clear_right_most,congregate_seeds]\n",
     "full_h_list = [pit_total,side_total,chance_to_clear_right_most,congregate_seeds,capture_defense]\n",
     "alt_h_list = [pit_total,side_total,chance_to_clear_right_most,congregate_seeds,capture_available]\n",
@@ -985,19 +985,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'chapiteau': 92,\n",
-       " 'Pebbles': 347,\n",
-       " 'Pebbles_BestDefense': 295,\n",
-       " 'PebbleReaper': 330}"
+       "{'chapiteau': 29,\n",
+       " 'Pebbles': 220,\n",
+       " 'Pebbles_BestDefense': 388,\n",
+       " 'PebbleReaper': 429}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
